--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,6 @@ hr {
 .blog {
     display: flex;
     gap: 16px;
-    justify-content: center;
 }
 
 .blog .thamnail img {
@@ -135,7 +134,7 @@ hr {
     font-size: 14.6913px;
     color: #ED6B4F;
     margin-top: 7px;
-    margin-bottom: 19px;
+    margin-bottom: 11px;
 }
 
 .cours-info{
@@ -155,6 +154,10 @@ hr {
     color: #AEAEAE;
 }
 
+/* .r-number p{
+    margin: 0;
+    color: #A2A2A2;
+} */
 .cours-duration {
     color: #FF4A60;
     background: #FFE4E8;
@@ -171,11 +174,28 @@ hr {
 
 /* mobile devices */
 
-@media screen and (max-width:688px) {
+@media only screen and (max-width:688px) {
     .container{
         width: 100%;
     }
-    .players{
+    .players, .blogs, .courses{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+}
+
+/* tablate device */
+@media only screen and (min-width: 689px) and 
+(max-width: 992px){
+
+    .container{
+        width: 100%;
+    }
+
+    .players, .courses{
+        grid-template-columns: repeat(2, 1fr);
+        
     }
 }
